Fix the style of the tasktray otherwise it creates scrollbars

--- a/homescreen.css
+++ b/homescreen.css
@@ -13,7 +13,7 @@ html, body {
   height: 100%; 
   background-image: url('images/background.jpg');
   background-size: cover;
-  box-shadow: 0 4px 8px #000;
+  box-shadow: 0 0px 8px #000;
 }
 
 #screen.animateTaskManagerOpen {
@@ -247,5 +247,6 @@ iframe.appWindow {
   position: absolute;
   bottom: 0;
   width: -moz-calc(100%);
-  height: 140px;
 }
+
+
